Adicionado o projeto redes sociais, área de projetos finalizada, projeto finalizado.

--- a/index.html
+++ b/index.html
@@ -446,10 +446,9 @@
                         </div>
                     </div>
                     <div class="projeto"> <!-- Projeto 03 -->
-                        <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Android.png" alt="projeto 01" class="foto">
                         <div class="projeto-info">
-                            <p class="periodo">2025</p>
-                            <a class="titulo" href="">
+                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-android/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
                                 Projeto Android
                             </a>
@@ -459,28 +458,28 @@
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, rerum. Eum itaque
-                                    hic vel velit. Quidem quibusdam corrupti expedita adipisci neque sapiente quasi
-                                    maiores laboriosam, recusandae deleniti a dicta. Neque.
+                                    O site é responsivo, quando a tela fica pequena margens são removidas, o tamanho de imagens se adapta e imagens diferentes são usadas.
                                 </p>
                             </details>
                         </div>
                     </div>
                     <div class="projeto"> <!-- Projeto 04 -->
-                        <img src="images/imagem-nao-disponivel-271x300.jpg" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Redes Sociais.png" alt="projeto 01" class="foto">
                         <div class="projeto-info">
-                            <p class="periodo">2025</p>
-                            <i class="fa-solid fa-circle-arrow-right"></i>
-                            <h3 class="titulo">Projeto Redes Sociais</h3>
+                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Redes-Sociais/">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto Redes Sociais
+                            </a>
                             <p>
                                 Projeto construído para demonstrar a inserção de iframes em nosso site.
                             </p>
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, rerum. Eum itaque
-                                    hic vel velit. Quidem quibusdam corrupti expedita adipisci neque sapiente quasi
-                                    maiores laboriosam, recusandae deleniti a dicta. Neque.
+                                    Um iframe dentro da imagem de um smartfone é atualizado sempre que um botão do menu a esquerda é clicado, mudando o conteúdo dentro do iframe.
+                                </p>
+                                <p>
+                                    Rolando com a roda do mouse ou setas direcionais do teclado é possível ver o resto da imagem e um link para a mídia social mostrada na imagem.
                                 </p>
                             </details>
                         </div>
