Corrigido alguns erros de português.

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    O site é responsivo, quando a tela fica pequena margens são removidas, o tamanho de imagens se adapta e imagens diferentes são usadas.
+                                    O site é totalmente responsivo: quando a tela é reduzida, as margens são removidas, o tamanho das imagens se ajusta automaticamente e versões alternativas das imagens são exibidas.
                                 </p>
                             </details>
                         </div>
@@ -476,10 +476,10 @@
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    Um iframe dentro da imagem de um smartfone é atualizado sempre que um botão do menu a esquerda é clicado, mudando o conteúdo dentro do iframe.
+                                    O iframe exibido dentro da imagem de um smartphone é atualizado sempre que um botão do menu à esquerda é selecionado, modificando o conteúdo apresentado.
                                 </p>
                                 <p>
-                                    Rolando com a roda do mouse ou setas direcionais do teclado é possível ver o resto da imagem e um link para a mídia social mostrada na imagem.
+                                    Ao rolar a página com o mouse ou utilizar as setas direcionais do teclado, é possível visualizar a área restante da imagem e acessar o link correspondente à mídia social exibida.
                                 </p>
                             </details>
                         </div>
