Mais uma tentativa de nav para mobiles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <nav id="menu">
             <a class="link" href="#detalhes"><i class="fa-solid fa-house"></i>Home</a>
             <a class="link" href="#competencias"><i class="fa-solid fa-bars-progress"></i>Competências</a>
-            <a class="link" href="#formacao"><i class="fa-solid fa-graduation-cap"></i>Formações</a>
+            <a class="link" href="#formacao"><i class="fa-solid fa-graduation-cap"></i>Certificados</a>
             <a class="link" href="#projetos"><i class="fa-solid fa-trowel-bricks"></i>Projetos</a>
             <a id="botao-tema"><i class="fa-solid fa-moon"></i>Tema</a>
         </nav>
@@ -203,7 +203,7 @@
                 </div>
             </article> <!-- Fim da article competência -->
             <article id="formacao">
-                <h2><i class="fa-solid fa-graduation-cap"></i>Formação</h2>
+                <h2><i class="fa-solid fa-graduation-cap"></i>Certificados</h2>
                 <div>
                     <div id="formacao-container">
                         <details class="curso">
