Alterado o texto em um projeto

--- a/index.html
+++ b/index.html
@@ -458,6 +458,9 @@
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
+                                    Este projeto contem uma matéria sobre a historia do Android o sistema operacional para dispositivos moveis.
+                                </p>
+                                <p>
                                     O site é totalmente responsivo: quando a tela é reduzida, as margens são removidas, o tamanho das imagens se ajusta automaticamente e versões alternativas das imagens são exibidas.
                                 </p>
                             </details>
