Adicionado uma nota sobre o projeto redes sociais não funcionar em dispositivos moveis

--- a/index.html
+++ b/index.html
@@ -484,6 +484,9 @@
                                 <p>
                                     Ao rolar a página com o mouse ou utilizar as setas direcionais do teclado, é possível visualizar a área restante da imagem e acessar o link correspondente à mídia social exibida.
                                 </p>
+                                <p>
+                                    Note que este projeto foi feito antes das aulas de media query e mobile first, então não se adapta a dispositivos moveis, apenas a PC e Notebooks.
+                                </p>
                             </details>
                         </div>
                     </div>
