Adicionado o projeto login a lista de projetos corrigido os links para que abram em novas paginas

--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
                 </h2>
                 <div id="projeto-container">
                     <div class="projeto"> <!-- Projeto 01 -->
-                        <img src="images/projetos/Projeto Vídeos.png" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Vídeos.png" alt="projeto vídeos" class="foto">
                         <div class="projeto-info">
-                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Videos/">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Videos/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
                                 Projeto Vídeos
                             </a>
@@ -425,9 +425,9 @@
                         </div>
                     </div>
                     <div class="projeto"> <!-- Projeto 02 -->
-                        <img src="images/projetos/Projeto Cordel.gif" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Cordel.gif" alt="projeto cordel" class="foto">
                         <div class="projeto-info">
-                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-cordel/">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-cordel/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
                                 Projeto Cordel
                             </a>
@@ -446,9 +446,9 @@
                         </div>
                     </div>
                     <div class="projeto"> <!-- Projeto 03 -->
-                        <img src="images/projetos/Projeto Android.png" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Android.png" alt="projeto Android" class="foto">
                         <div class="projeto-info">
-                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-android/">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-android/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
                                 Projeto Android
                             </a>
@@ -467,9 +467,9 @@
                         </div>
                     </div>
                     <div class="projeto"> <!-- Projeto 04 -->
-                        <img src="images/projetos/Projeto Redes Sociais.png" alt="projeto 01" class="foto">
+                        <img src="images/projetos/Projeto Redes Sociais.png" alt="projeto redes sociais" class="foto">
                         <div class="projeto-info">
-                            <a class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Redes-Sociais/">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Redes-Sociais/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
                                 Projeto Redes Sociais
                             </a>
@@ -479,13 +479,35 @@
                             <details class="descricao">
                                 <summary>Saiba mais...</summary>
                                 <p>
-                                    O iframe exibido dentro da imagem de um smartphone é atualizado sempre que um botão do menu à esquerda é selecionado, modificando o conteúdo apresentado.
+                                    O iframe exibido dentro da imagem de um Smartfone é atualizado sempre que um botão do menu à esquerda é selecionado, modificando o conteúdo apresentado.
                                 </p>
                                 <p>
                                     Ao rolar a página com o mouse ou utilizar as setas direcionais do teclado, é possível visualizar a área restante da imagem e acessar o link correspondente à mídia social exibida.
                                 </p>
                                 <p>
                                     Note que este projeto foi feito antes das aulas de media query e mobile first, então não se adapta a dispositivos moveis, apenas a PC e Notebooks.
+                                </p>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="projeto"> <!-- Projeto 04 -->
+                        <img src="images/projetos/Projeto Login.png" alt="projeto login" class="foto">
+                        <div class="projeto-info">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-login/">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto Login
+                            </a>
+                            <p>
+                                Projeto construído para demonstrar responsividade e media query.
+                            </p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>
+                                    O projeto tem vários arranjos dependendo do tamanho da tela. 
+                                </p>
+                                <p>
+                                    O site é uma tela de login, embora não tenha funcionalidade de login.
+                                    Ele ainda serve para demonstrar um formulário é como se adapta a varias tamanhos de tela.
                                 </p>
                             </details>
                         </div>
