Nem sei o que fiz, mas o vs code ta dizendo que tem mudanças

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +40,7 @@
             "jobTitle": "Desenvolvedor Full-Stack"
         }
     </script>
+    <script src="js/color-mode.js"></script>
 </head>
 <body>
     <header>
