Adicionado mais 2 projetos

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                     
                     </div>
                 </h2>
-  
                 <div class="flex-row">
                     <div class="item">
                         <div class="info">
@@ -108,12 +107,10 @@
                                 HTML5
                             </span>
                             <span class="porcento">
-                                80%
+                                83%
                             </span>
                         </div>
-                        <progress class="barra" value="80" max="100">
-                            80%
-                        </progress>
+                        <progress class="barra" value="83" max="100"></progress>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -122,12 +119,10 @@
                                 CSS3
                             </span>
                             <span class="porcento">
-                                80%
+                                83%
                             </span>
                         </div>
-                        <progress class="barra" value="80" max="100">
-                            80%
-                        </progress>
+                        <progress class="barra" value="83" max="100"></progress>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -136,12 +131,10 @@
                                 JavaScript
                             </span>
                             <span class="porcento">
-                                26%
+                                39%
                             </span>
                         </div>
-                        <progress class="barra" value="26" max="100">
-                            26%
-                            </progess>
+                        <progress class="barra" value="39" max="100"></progess>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -150,12 +143,10 @@
                                 PHP
                             </span>
                             <span class="porcento">
-                                20%
+                                17%
                             </span>
                         </div>
-                        <progress class="barra" value="20" max="100">
-                            20%
-                        </progress>
+                        <progress class="barra" value="17" max="100"></progress>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -164,12 +155,10 @@
                                 MySQL
                             </span>
                             <span class="porcento">
-                                13%
+                                6%
                             </span>
                         </div>
-                        <progress class="barra" value="13" max="100">
-                            13%
-                        </progress>
+                        <progress class="barra" value="6" max="100"></progress>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -178,26 +167,10 @@
                                 Python
                             </span>
                             <span class="porcento">
-                                13%
+                                11%
                             </span>
                         </div>
-                        <progress class="barra" value="13" max="100">
-                            13%
-                        </progress>
-                    </div>
-                    <div class="item">
-                        <div class="info">
-                            <span class="nome">
-                                <span class="icone-competencia svg-icon icon-copilot" aria-hidden="true"></span>
-                                Copilot
-                            </span>
-                            <span class="porcento">
-                                100%
-                            </span>
-                        </div>
-                        <progress class="barra" value="100" max="100">
-                            100%
-                        </progress>
+                        <progress class="barra" value="11" max="100"></progress>
                     </div>
                 </div>
             </article> <!-- Fim da article competência -->
@@ -389,7 +362,6 @@
                                 </fieldset>
                             </div>
                         </details>
-                        
                     </div>
                 </div>
             </article> <!-- Fim da article formação -->
@@ -489,7 +461,7 @@
                             </details>
                         </div>
                     </div>
-                    <div class="projeto"> <!-- Projeto 04 -->
+                    <div class="projeto"> <!-- Projeto 05 -->
                         <img src="images/projetos/Projeto Login.png" alt="projeto login" class="foto">
                         <div class="projeto-info">
                             <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/projeto-login/">
@@ -507,6 +479,45 @@
                                 <p>
                                     O site é uma tela de login, embora não tenha funcionalidade de login.
                                     Ele ainda serve para demonstrar um formulário é como se adapta a varias tamanhos de tela.
+                                </p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 06 -->
+                        <img src="images/projetos/Projeto Cores do dia.png" alt="projeto Cores do Dia" class="foto">
+                        <div class="projeto-info">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Cores-do-Dia/">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto Cores do Dia
+                            </a>
+                            <p>
+                                Projeto construído para demonstrar mudança automática de tema de cores e imagem da página.
+                            </p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>
+                                    O tema do projeto muda automaticamente de acordo com o horário do usuário.
+                                    Tanto as cores quanto a imagem usado mudam.
+                                </p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 07 -->
+                        <img src="images/projetos/Projetos Retratos.png" alt="projeto Retratos" class="foto">
+                        <div class="projeto-info">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Retratos/">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto Retratos
+                            </a>
+                            <p>
+                                Projeto mostra um retrato personalizado baseado na idade e sexo do usuário.
+                            </p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>
+                                    Na página o usuário é perguntado sobre sexo e idade, a imagem no centro da tela então se atualiza com um retrato de uma pessoa com a faixa etária e sexo.
                                 </p>
                             </details>
                         </div>
