Adicionado mais um projeto a lista de projetos no portfólio e ajustado as barras de habilidades para  refletir melhor o conhecimento atual.

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                                 HTML5
                             </span>
                             <span class="porcento">
-                                83%
+                                84%
                             </span>
                         </div>
-                        <progress class="barra" value="83" max="100"></progress>
+                        <progress class="barra" value="84" max="100"></progress>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -119,10 +119,10 @@
                                 CSS3
                             </span>
                             <span class="porcento">
-                                83%
+                                84%
                             </span>
                         </div>
-                        <progress class="barra" value="83" max="100"></progress>
+                        <progress class="barra" value="84" max="100"></progress>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -131,10 +131,10 @@
                                 JavaScript
                             </span>
                             <span class="porcento">
-                                39%
+                                42%
                             </span>
                         </div>
-                        <progress class="barra" value="39" max="100"></progess>
+                        <progress class="barra" value="42" max="100"></progess>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -143,10 +143,10 @@
                                 PHP
                             </span>
                             <span class="porcento">
-                                17%
+                                16%
                             </span>
                         </div>
-                        <progress class="barra" value="17" max="100"></progress>
+                        <progress class="barra" value="16" max="100"></progress>
                     </div>
                     <div class="item">
                         <div class="info">
@@ -155,7 +155,7 @@
                                 MySQL
                             </span>
                             <span class="porcento">
-                                6%
+                                5%
                             </span>
                         </div>
                         <progress class="barra" value="6" max="100"></progress>
@@ -505,7 +505,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 07 -->
-                        <img src="images/projetos/Projetos Retratos.png" alt="projeto Retratos" class="foto">
+                        <img src="images/projetos/Projetos Retrato.png" alt="projeto Retratos" class="foto">
                         <div class="projeto-info">
                             <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Retratos/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
@@ -522,6 +522,29 @@
                             </details>
                         </div>
                     </div>
+
+                    <div class="projeto"> <!-- Projeto 08 -->
+                        <img src="images/projetos/Projeto Tema do Sistema.gif" alt="projeto tema do sistema" class="foto">
+                        <div class="projeto-info">
+                            <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Tema-do-Sistema/">
+                                <i class="fa-solid fa-circle-arrow-right"></i>
+                                Projeto Tema do Sistema
+                            </a>
+                            <p>
+                                Projeto que demonstra como o tema do sistema pode alterar a aparencia de uma pagina sem que o usuário precisa definila manualmente.
+                            </p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>
+                                    O tema do projeto muda automaticamente de acordo com o tema definido no sistema operacional do usuário.
+                                </p>
+                                <p>
+                                    O usuário também pode alterar manualmente o tema clicando no botão de alternar tema.
+                                </p>
+                            </details>
+                        </div>
+                    </div>
+
                 </div>
             </article> <!-- Fim da article projetos -->
         </section>
