Corrigido o mesmo erro de antes eu acho?

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     </div>
 
                     <div class="projeto"> <!-- Projeto 07 -->
-                        <img src="images/projetos/Projetos Retratos.png" alt="projeto Retratos" class="foto">
+                        <img src="images/projetos/Projeto Retratos.png" alt="projeto Retratos" class="foto">
                         <div class="projeto-info">
                             <a target="_blank" rel="noopener" class="projeto-titulo" href="https://otavioborges1991.github.io/Projeto-Retratos/">
                                 <i class="fa-solid fa-circle-arrow-right"></i>
